--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
